Added kafka tests for Avro and JSON (#130)